version/0.34/_sources/api/solver/_autosummary/settings/network_child.rst.txt
:orphan:

.. _network_child:

network_child
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.network_child
    :show-inheritance:

.. rubric:: Attributes

==============================   ======================================

Attribute                                                       Summary

==============================   ======================================
:ref:`name <name_4>`                                Name of the object.

:ref:`locations <locations_2>`                     Input location name.

:ref:`settings <settings_10>`        Domain name to define settings on.

==============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

========================   ================

Parent                              Summary

========================   ================
:ref:`network <network>`       Thread-type.

========================   ================

